updated row mapper