@@ -3,10 +3,10 @@ package notification.util;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import notification.config.Configuration;
 import notification.repository.ServiceRequestRepository;
-import org.egov.common.contract.idgen.IdGenerationRequest;
-import org.egov.common.contract.idgen.IdGenerationResponse;
-import org.egov.common.contract.idgen.IdRequest;
-import org.egov.common.contract.idgen.IdResponse;
+import notification.web.models.IdGenerationRequest;
+import notification.web.models.IdGenerationResponse;
+import notification.web.models.IdRequest;
+import notification.web.models.IdResponse;
 import org.egov.common.contract.request.RequestInfo;
 import org.egov.tracer.model.CustomException;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -15,7 +15,6 @@ import org.springframework.util.CollectionUtils;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static notification.config.ServiceConstants.IDGEN_ERROR;
 import static notification.config.ServiceConstants.NO_IDS_FOUND_ERROR;
@@ -32,10 +31,11 @@ public class IdgenUtil {
     @Autowired
     private Configuration configs;
 
-    public List<String> getIdList(RequestInfo requestInfo, String tenantId, String idName, String idformat, Integer count) {
+
+    public List<String> getIdList(RequestInfo requestInfo, String tenantId, String idName, String idformat, Integer count, Boolean isSequencePadded) {
         List<IdRequest> reqList = new ArrayList<>();
         for (int i = 0; i < count; i++) {
-            reqList.add(IdRequest.builder().idName(idName).format(idformat).tenantId(tenantId).build());
+            reqList.add(IdRequest.builder().idName(idName).format(idformat).tenantId(tenantId).isSequencePadded(isSequencePadded).build());
         }
 
         IdGenerationRequest request = IdGenerationRequest.builder().idRequests(reqList).requestInfo(requestInfo).build();
@@ -47,6 +47,7 @@ public class IdgenUtil {
         if (CollectionUtils.isEmpty(idResponses))
             throw new CustomException(IDGEN_ERROR, NO_IDS_FOUND_ERROR);
 
-        return idResponses.stream().map(IdResponse::getId).collect(Collectors.toList());
+        return idResponses.stream().map(IdResponse::getId).toList();
     }
+
 }
